# project_safecity

./: .gitignore  README.md  app.py  charts.py  logic_ai.py  main.py  pyproject.toml  requirements.txt  test_ai.py
.streamlit/: secrets.toml
data/processed/: safecity_20251218_095533.parquet
pipeline/: config.py  enrich.py  fetch_crimes.py  fetch_geo.py  fetch_population.py  run_pipeline.py  store.py  transform.py
tests/: test_ai.py  test_fetchers.py  test_transformer.py
utils/: charts.py  data.py  logic_ai.py
