[project]
name = "project-safecity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.1",
    "duckdb>=1.4.3",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "httpx>=0.28.1",
    "huggingface-hub>=0.36.0",
    "litellm>=1.80.10",
    "matplotlib>=3.10.8",
    "notebook>=7.5.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "streamlit>=1.52.2",
    "transformers>=4.57.3",
    "groq>=1.0.0",
    "pytest>=9.0.2",
]
